src/objects/Survey_Comment_Product__c.object
<CustomObject>
    <description>A many to many relationship object between Safety Assessment Survey and Case Product.</description>
    <fields>
        <fullName>Case_Comment_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Comment Code</label>
        <referenceTo>Case_Comment_Code__c</referenceTo>
        <relationshipLabel>Survey Comment Products</relationshipLabel>
        <relationshipName>Survey_Comment_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Product__c</fullName>
        <label>Case Product</label>
        <referenceTo>Case_Product__c</referenceTo>
        <relationshipLabel>Survey Comment Products</relationshipLabel>
        <relationshipName>Survey_Comment_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <formula>CASESAFEID(Safety_Assessment_Survey__r.Case__c)</formula>
        <label>Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Image__c</fullName>
        <formula>Case_Product__r.Local_Product__r.Image_Url__c</formula>
        <label>Main Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety_Assessment_Survey__c</fullName>
        <label>Safety Assessment Survey</label>
        <referenceTo>Safety_Assessment_Survey__c</referenceTo>
        <relationshipLabel>Survey Comment Products</relationshipLabel>
        <relationshipName>Survey_Comment_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Translated_Path__c</fullName>
        <formula>Case_Product__r.Local_Product__r.Translated_Path__c</formula>
        <label>Translated Path</label>
        <type>Text</type>
    </fields>
    <label>Survey Comment Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Case_Comment_Code__c</columns>
        <columns>Case_Product__c</columns>
        <columns>Safety_Assessment_Survey__c</columns>
        <columns>Translated_Path__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SCP-{0000}</displayFormat>
        <label>Survey Comment Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Comment Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>